_BACKUP/z_HTML-VERSIONS/version2/bgoonz42.gitbook.io/datastructures-in-pytho/practice/untitled/untitled-4.md
<a href="../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Main Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="../../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<a href="../../cirriculumn/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<a href="untitled-7.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Untitled</span></a>

<a href="industry-standard-algorithms.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Industry Standard Algorithms</span></a>

<a href="interview-practice-resources.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Practice Resources</span></a>

<a href="overflow-practice-problems.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Overflow Practice Problems</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Array</span>

<a href="stack.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Stack</span></a>

<a href="queue.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue</span></a>

<a href="queue-sandbox.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue Sandbox</span></a>

<a href="binary-search.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search</span></a>

<a href="bst-explained.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">BST Explained</span></a>

<a href="binary-tree.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Tree</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search Tree</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Recursion</span>

<a href="untitled-5.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Hash Table</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Linked List</span>

<a href="untitled-4/double-linked-list.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Double Linked List</span></a>

<a href="untitled-4/list-operations.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Operations</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Sorting</span>

<a href="untitled-2.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Searching</span></a>

<a href="untitled-1.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graphs</span></a>

<a href="untitled.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Exotic</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../../resources/code-signal-cga-sprint-resources.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code Signal CGA Sprint Resources</span></a>

<a href="../../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../../misc/untitled/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/python-module-index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span></a>

<a href="../../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">index</span></a>

<a href="../../bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Python-Docs</span></span>

<a href="../../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<a href="../../stdlib/python-standard-library-stdlib.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Standard Library (STDLIB)</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<a href="../../stdlib/built-in-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes</span>

<a href="../../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../../interview-prep/interview-resources/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">Linked List</span>
================================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Implementation </span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Second Tab</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Advanced</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Implementation </span>

    """The LinkedList code from before is provided below.Add three functions to the LinkedList."get_position" returns the element at a certain position.The "insert" function will add an element to a particularspot in the list."delete" will delete the first element with thatparticular value.Then, use "Test Run" and "Submit" to run the test casesat the bottom."""​class Element(object):    def __init__(self, value):        self.value = value        self.next = None​class LinkedList(object):    def __init__(self, head=None):        self.head = head​    def append(self, new_element):        current = self.head        if self.head:            while current.next:                current = current.next            current.next = new_element        else:            self.head = new_element​    def get_position(self, position):        """Get an element from a particular position.        Assume the first position is "1".        Return "None" if position is not in the list."""        current = self.head        if(self.head):            for i in range(position)[1:]:                if(current.next==None):                    return None                else:                    current=current.next            return current        return None​    def insert(self, new_element, position):        """Insert a new node at the given position.        Assume the first position is "1".        Inserting at position 3 means between        the 2nd and 3rd elements."""        current = self.head        if(self.head):            for i in range(position)[1:]:                if(i==position-1):                    after = current.next                    current.next = new_element                    new_element.next = after                elif(current.next!=None):                    current = current.next                else:                    return 'position out of bounds'        pass​​    def delete(self, value):        """Delete the first node with a given value."""        current = self.head        if(self.head):            while(current.next!=None):                if(current.next.value==value):                    after = current.next.next                    current.next = after                else:                    current = current.next​        if(self.head.value==value):            after = self.head.next            self.head = after        pass​# Test cases# Set up some Elementse1 = Element(1)e2 = Element(2)e3 = Element(3)e4 = Element(4)​# Start setting up a LinkedListll = LinkedList(e1)ll.append(e2)ll.append(e3)​# Test get_position# Should print 3print ll.head.next.next.value# Should also print 3print ll.get_position(3).value​# Test insertll.insert(e4,3)# Should print 4 nowprint ll.get_position(3).value​# Test deletell.delete(1)# Should print 2 nowprint ll.get_position(1).value# Should print 4 nowprint ll.get_position(2).value# Should print 3 nowprint ll.get_position(3).value​

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Second Tab</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="fef4799b67af49b396e45e5e6940e522"><span data-offset-key="fef4799b67af49b396e45e5e6940e522:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Advanced</span>

    from __future__ import annotations​from collections.abc import Iterable, Iteratorfrom typing import Optional​from graph_examples.linked_lists.base_lists import (    BaseCircularLinkedList,    BaseLinearLinkedList,    BaseDoublyLinkedList,    BaseSinglyLinkedList,)from graph_examples.linked_lists.nodes import LinkedNode, DoublyLinkedNode, CircularLinkedNode, CircularDoublyLinkedNodefrom graph_examples.linked_lists.base_nodes import T​​class LinkedList(BaseLinearLinkedList[T], BaseSinglyLinkedList[T]):    def __init__(self, values: Iterable[T] = ()) -> None:        values_iter = iter(values)        try:            self.head = LinkedNode(next(values_iter))        except StopIteration:            self.head = None        node = self.head        for value in values_iter:            node.next = LinkedNode(value)            node = node.next​    def appendleft(self, value: T) -> None:        self.head = LinkedNode(value, self.head)​    def popleft(self) -> T:        if not self:            raise IndexError        node = self.head        self.head = node.next        return node.value​    def reverse(self) -> None:        node = self.head        last_node = None        while node is not None:            node.next, last_node, node = last_node, node, node.next        self.head = last_node​​class DoublyLinkedList(BaseLinearLinkedList[T], BaseDoublyLinkedList[T]):    def __init__(self, values: Iterable = ()) -> None:        values_iter = iter(values)        try:            self.head = DoublyLinkedNode(next(values_iter))        except StopIteration:            self.head = None        node = self.head        for value in values_iter:            node.next = DoublyLinkedNode(value, None, node)            node = node.next        self.tail = node​    def __reversed__(self) -> Iterator[T]:        node = self.tail        while node is not None:            yield node.value            node = node.last​    def append(self, value: T):        old_tail = self.tail        self.tail = DoublyLinkedNode(value, None, old_tail)        if old_tail is None:            self.head = self.tail        else:            old_tail.next = self.tail​    def appendleft(self, value: T):        old_head = self.head        self.head = DoublyLinkedNode(value, old_head)        if old_head is None:            self.tail = self.head        else:            old_head.last = self.head​    def pop(self) -> T:        if not self:            raise IndexError        old_tail = self.tail        self.tail = old_tail.last        if self.tail is None:            self.head = None        else:            self.tail.next = None        return old_tail.value​    def popleft(self) -> T:        if not self:            raise IndexError        old_head = self.head        self.head = old_head.next        if self.head is None:            self.tail = None        else:            self.head.last = None        return old_head.value​    def reverse(self) -> None:        node = self.head        self.head, self.tail = self.tail, self.head        while node is not None:            node.next, node.last, node = node.last, node.next, node.next​​class CircularLinkedList(BaseCircularLinkedList[T], BaseSinglyLinkedList[T]):    def __init__(self, values: Iterable[T] = ()):        values_iter = iter(values)        try:            head = CircularLinkedNode(next(values_iter))        except StopIteration:            head = None        node = head        for value in values_iter:            node.next = CircularLinkedNode(value, head)            node = node.next        self.tail = node​    @property    def head(self) -> CircularLinkedNode[T]:        return self.tail.next​    @head.setter    def head(self, node: CircularLinkedNode[T]):        self.tail.next = node​    def appendleft(self, value: T) -> None:        if not self:            self.tail = CircularLinkedNode(value)        else:            self.head = CircularLinkedNode(value, self.head)​    def reverse(self) -> None:        if not self:            return        node = self.head        last_node = self.tail        while node is not self.tail:            node.next, last_node, node = last_node, node, node.next        self.tail.next, self.tail = last_node, self.head​​class CircularDoublyLinkedList(BaseCircularLinkedList[T], BaseDoublyLinkedList[T]):    tail: Optional[CircularDoublyLinkedNode[T]]    head: Optional[CircularDoublyLinkedNode[T]]​    def __init__(self, values: Iterable[T] = ()) -> None:        values_iter = iter(values)        try:            head = CircularDoublyLinkedNode(next(values_iter))        except StopIteration:            head = None        node = head        for value in values_iter:            node.next = CircularDoublyLinkedNode(value, head, node)            node = node.next            head.last = node        self.tail = node​    @property    def head(self) -> CircularDoublyLinkedNode[T]:        return self.tail.next​    def __reversed__(self) -> Iterator[T]:        if not self:            return        yield self.tail.value        node = self.tail.last        while node is not self.tail:            yield node.value            node = node.last​    def append(self, value: T) -> None:        if not self:            self.tail = CircularDoublyLinkedNode(value)        else:            self.tail = CircularDoublyLinkedNode(value, self.head, self.tail)            self.tail.last.next = self.tail            self.head.last = self.tail​    def appendleft(self, value: T) -> None:        if not self:            self.tail = CircularDoublyLinkedNode(value)        else:            self.tail.next = CircularDoublyLinkedNode(value, self.head, self.tail)            self.head.next.last = self.tail.next​    def pop(self) -> T:        if not self:            raise IndexError        value = self.tail.value        if self.tail is self.head:            self.tail = None        else:            self.tail.last.next, self.head.last, self.tail = self.head, self.tail.last, self.tail.last        return value​    def popleft(self) -> T:        if not self:            raise IndexError        value = self.head.value        if self.tail is self.head:            self.tail = None        else:            self.tail.next = self.tail.next.next            self.tail.next.last = self.tail        return value​    def reverse(self) -> None:        if not self:            return        node = self.head        while node is not self.tail:            node.next, node.last, node = node.last, node.next, node.next        self.tail.next, self.tail.last, self.tail = self.tail.last, self.tail.next, self.tail.next​

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4f7d788992eb4d4db0e6a4ee5fb95987"><span data-offset-key="4f7d788992eb4d4db0e6a4ee5fb95987:0">A linked list is similar to an array, it holds values. However, links in a linked list do not have indexes.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9a890e649e064279a44af8237fcc2615"><span data-offset-key="9a890e649e064279a44af8237fcc2615:0">This is an example of a double ended, doubly linked list.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3965836406e54f559ff943720b436c66"><span data-offset-key="3965836406e54f559ff943720b436c66:0">Each link references the next link and the previous one.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b6726611373841d6b844b5c18443e0fb"><span data-offset-key="b6726611373841d6b844b5c18443e0fb:0">A Doubly Linked List (DLL) contains an extra pointer, typically called previous</span></span></span>

    <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="70ebf101ed8d4b18beac489f7a53106e"><span data-offset-key="70ebf101ed8d4b18beac489f7a53106e:0"> pointer, together with next pointer and data which are there in singly linked list.</span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d4e00d852dd54288a2e7cca84fc23144"><span data-offset-key="d4e00d852dd54288a2e7cca84fc23144:0">Advantages over SLL - It can be traversed in both forward and backward direction.</span></span></span>

        <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="52ef0a816f064073976dc73a25295ce1"><span data-offset-key="52ef0a816f064073976dc73a25295ce1:0"> Delete operation is more efficient</span></span></span>

    """Each ListNode holds a reference to its previous nodeas well as its next node in the List."""class ListNode:  def __init__(self, value, prev=None, next=None):    self.value = value    self.prev = prev    self.next = next​  """Wrap the given value in a ListNode and insert it  after this node. Note that this node could already  have a next node it is point to."""  def insert_after(self, value):    current_next = self.next    self.next = ListNode(value, self, current_next)    if current_next:      current_next.prev = self.next​  """Wrap the given value in a ListNode and insert it  before this node. Note that this node could already  have a previous node it is point to."""  def insert_before(self, value):    current_prev = self.prev    self.prev = ListNode(value, current_prev, self)    if current_prev:      current_prev.next = self.prev​  """Rearranges this ListNode's previous and next pointers  accordingly, effectively deleting this ListNode."""  def delete(self):    if self.prev:      self.prev.next = self.next    if self.next:      self.next.prev = self.prev​"""Our doubly-linked list class. It holds references tothe list's head and tail nodes."""class DoublyLinkedList:  def __init__(self, node=None):    self.head = node    self.tail = node    self.length = 1 if node is not None else 0​  def __len__(self):    return self.length​  def add_to_head(self, value):    pass​  def remove_from_head(self):    pass​  def add_to_tail(self, value):    pass​  def remove_from_tail(self):    pass​  def move_to_front(self, node):    pass​  def move_to_end(self, node):    pass​  def delete(self, node):    pass      def get_max(self):    pass​

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4f31f0b77db64bf9856ccbd4e0864a48"><span data-offset-key="4f31f0b77db64bf9856ccbd4e0864a48:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9f0d0262b80941d48c4e9a532cfe2cbb"><span data-offset-key="9f0d0262b80941d48c4e9a532cfe2cbb:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0a1082056363476994e7f52439ad9e1c"><span data-offset-key="0a1082056363476994e7f52439ad9e1c:0">Test:</span></span></span>

    import unittestfrom doubly_linked_list import ListNodefrom doubly_linked_list import DoublyLinkedList​class DoublyLinkedListTests(unittest.TestCase):  def setUp(self):    self.node = ListNode(1)    self.dll = DoublyLinkedList(self.node)​  def test_list_remove_from_tail(self):    self.dll.remove_from_tail()    self.assertIsNone(self.dll.head)    self.assertIsNone(self.dll.tail)    self.assertEqual(len(self.dll), 0)​    self.dll.add_to_tail(33)    self.assertEqual(self.dll.head.value, 33)    self.assertEqual(self.dll.tail.value, 33)    self.assertEqual(len(self.dll), 1)    self.assertEqual(self.dll.remove_from_tail(), 33)    self.assertEqual(len(self.dll), 0)​    self.dll.add_to_tail(68)    self.assertEqual(len(self.dll), 1)    self.assertEqual(self.dll.remove_from_tail(), 68)    self.assertEqual(len(self.dll), 0)​  def test_list_remove_from_head(self):    self.dll.remove_from_head()    self.assertIsNone(self.dll.head)    self.assertIsNone(self.dll.tail)    self.assertEqual(len(self.dll), 0)​    self.dll.add_to_head(2)    self.assertEqual(self.dll.head.value, 2)    self.assertEqual(self.dll.tail.value, 2)    self.assertEqual(len(self.dll), 1)    self.assertEqual(self.dll.remove_from_head(), 2)    self.assertEqual(len(self.dll), 0)        self.dll.add_to_head(55)    self.assertEqual(len(self.dll), 1)    self.assertEqual(self.dll.remove_from_head(), 55)    self.assertEqual(len(self.dll), 0)​  def test_list_add_to_tail(self):    self.assertEqual(self.dll.tail.value, 1)    self.assertEqual(len(self.dll), 1)​    self.dll.add_to_tail(30)    self.assertEqual(self.dll.tail.prev.value, 1)    self.assertEqual(self.dll.tail.value, 30)    self.assertEqual(len(self.dll), 2)​    self.dll.add_to_tail(20)    self.assertEqual(self.dll.tail.prev.value, 30)    self.assertEqual(self.dll.tail.value, 20)    self.assertEqual(len(self.dll), 3)​  def test_node_delete(self):    node_1 = ListNode(3)    node_2 = ListNode(4)    node_3 = ListNode(5)​    node_1.next = node_2    node_2.next = node_3    node_2.prev = node_1    node_3.prev = node_2​    node_2.delete()​    self.assertEqual(node_1.next, node_3)    self.assertEqual(node_3.prev, node_1)​  def test_node_insert_before(self):    self.node.insert_before(0)    self.assertEqual(self.node.prev.value, 0)​  def test_list_add_to_head(self):    self.assertEqual(self.dll.head.value, 1)​    self.dll.add_to_head(10)    self.assertEqual(self.dll.head.value, 10)    self.assertEqual(self.dll.head.next.value, 1)    self.assertEqual(len(self.dll), 2)​  def test_node_insert_after(self):    self.node.insert_after(2)    self.assertEqual(self.node.next.value, 2)​  def test_list_move_to_end(self):    self.dll.add_to_head(40)    self.assertEqual(self.dll.tail.value, 1)    self.assertEqual(self.dll.head.value, 40)​    self.dll.move_to_end(self.dll.head)    self.assertEqual(self.dll.tail.value, 40)    self.assertEqual(self.dll.tail.prev.value, 1)    self.assertEqual(len(self.dll), 2)​    self.dll.add_to_tail(4)    self.dll.move_to_end(self.dll.head.next)    self.assertEqual(self.dll.tail.value, 40)    self.assertEqual(self.dll.tail.prev.value, 4)    self.assertEqual(len(self.dll), 3)​  def test_list_move_to_front(self):    self.dll.add_to_tail(3)    self.assertEqual(self.dll.head.value, 1)    self.assertEqual(self.dll.tail.value, 3)​    self.dll.move_to_front(self.dll.tail)    self.assertEqual(self.dll.head.value, 3)    self.assertEqual(self.dll.head.next.value, 1)    self.assertEqual(len(self.dll), 2)​    self.dll.add_to_head(29)    self.dll.move_to_front(self.dll.head.next)    self.assertEqual(self.dll.head.value, 3)    self.assertEqual(self.dll.head.next.value, 29)    self.assertEqual(len(self.dll), 3)​  def test_list_delete(self):    self.dll.delete(self.node)    self.assertIsNone(self.dll.head)    self.assertIsNone(self.dll.tail)    self.assertEqual(len(self.dll), 0)​    self.dll.add_to_tail(1)    self.dll.add_to_head(9)    self.dll.add_to_tail(6)​    self.dll.delete(self.dll.head)    self.assertEqual(self.dll.head.value, 1)    self.assertEqual(self.dll.tail.value, 6)    self.assertEqual(len(self.dll), 2)​    self.dll.delete(self.dll.head)    self.assertEqual(self.dll.head.value, 6)    self.assertEqual(self.dll.tail.value, 6)    self.assertEqual(len(self.dll), 1)​  def test_get_max(self):    self.assertEqual(self.dll.get_max(), 1)    self.dll.add_to_tail(100)    self.assertEqual(self.dll.get_max(), 100)    self.dll.add_to_tail(55)    self.assertEqual(self.dll.get_max(), 100)    self.dll.add_to_tail(101)    self.assertEqual(self.dll.get_max(), 101)​if __name__ == '__main__':  unittest.main()

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="119a0e76dfc842969d17ed343ec39502"><span data-offset-key="119a0e76dfc842969d17ed343ec39502:0"><span data-slate-zero-width="n">​</span></span></span></span>

<a href="untitled-5.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Hash Table</span>

<a href="untitled-4/double-linked-list.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Double Linked List</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 1 hour ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/practice/untitled/untitled-4/README.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>
