_BACKUP/z_HTML-VERSIONS/version3/bgoonz42.gitbook.io/datastructures-in-pytho/practice/untitled/untitled-4.md
<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1631155247747.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1631155247747.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">My Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Index</span></a>

<a href="../../readme-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">README</span></a>

<a href="../../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">GCA Sprint Prep:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<a href="string.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">String</span></a>

<a href="set.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Set</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Data Structures Overview</span>

<a href="overflow-practice-problems.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Overflow Practice Problems</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Array</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Stack</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue</span>

<a href="binary-search.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Tree</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Recursion</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Hash Table</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Linked List</span>

<a href="untitled-4/double-linked-list.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Double Linked List</span></a>

<a href="untitled-4/list-example.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Example</span></a>

<a href="untitled-4/list-operations.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Operations</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Sorting</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Searching</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graphs</span>

<a href="heap.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Heap</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Exotic</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../../resources/untitled-2.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Inheritance</span></a>

<a href="../../resources/strings.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Strings</span></a>

<a href="../../resources/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<a href="../../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../../quick-reference/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/python3-regex.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python3 Regex</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span>

<a href="../../quick-reference/creating-python-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Creating Python Modules</span></a>

<a href="../../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">index</span></a>

<a href="../../quick-reference/bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Docs</span></span>

<a href="../../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<a href="../../stdlib/classes-and-objects.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes and objects</span></a>

<a href="../../stdlib/conditionals-and-loops.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Conditionals and loops</span></a>

<a href="../../stdlib/dictionaries-sets-files-and-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries, sets, files, and modules</span></a>

<a href="../../stdlib/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Functions</span></a>

<a href="../../stdlib/values-expressions-and-statments.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Values Expressions &amp; Statments</span></a>

<a href="../../stdlib/python-standard-library-stdlib.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Standard Library (STDLIB)</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes</span>

<a href="../../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../../misc/built-in-methods-and-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built-in Methods &amp; Functions</span></a>

<a href="../../misc/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<a href="../../installations-setup-and-env/installing-python-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Installing Python Modules</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">Linked List</span>
================================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="ad2d1e1c06624ae3b7eb769932aaccbe"><span data-offset-key="ad2d1e1c06624ae3b7eb769932aaccbe:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="db066a69b3ef402b8776339fc1529084"><span data-offset-key="db066a69b3ef402b8776339fc1529084:0">Linked List</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1e12503e2e1e4323951b41899be689bb"><span data-offset-key="1e12503e2e1e4323951b41899be689bb:0">Given a linked list, in addition to the next pointer, each node has a child pointer that can point to a separate list. With the head node, flatten the list to a single-level linked list.</span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9569719fcd7f4a19a4706ae93f9c1c17"><span data-offset-key="9569719fcd7f4a19a4706ae93f9c1c17:0"><span data-slate-zero-width="z">​</span></span></span><a href="http://blog.gainlo.co/index.php/2016/06/12/flatten-a-linked-list/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="5334dd2b594b45c8b8a6cba9b19f4ab6"><span data-offset-key="5334dd2b594b45c8b8a6cba9b19f4ab6:0">Source</span></span></a><span data-key="a511b7b0df9b4c52b093ba6e19f9c2f1"><span data-offset-key="a511b7b0df9b4c52b093ba6e19f9c2f1:0"><span data-slate-zero-width="z">​</span></span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3eecd238fa4245cbbd3d63bcdc287f7e"><span data-offset-key="3eecd238fa4245cbbd3d63bcdc287f7e:0">Reverse a singly linked list. Implement it recursively and iteratively.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="bb4b02721ec84a7b9d9cb3a97e28d8fe"><span data-offset-key="bb4b02721ec84a7b9d9cb3a97e28d8fe:0">Convert a binary tree to a doubly circular linked list.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8f20a178ec6442c6adc9baa8d571b5b3"><span data-offset-key="8f20a178ec6442c6adc9baa8d571b5b3:0">Implement an LRU cache with O(1) runtime for all its operations.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="35fb4f62631a4c4c9e389dc3b934ac3a"><span data-offset-key="35fb4f62631a4c4c9e389dc3b934ac3a:0">Check distance between values in linked list.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="10f728b3e043419691c87d7308d3395f"><span data-offset-key="10f728b3e043419691c87d7308d3395f:0">A question involving an API's integration with hash map where the buckets of hash map are made up of linked lists.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7b638ff7de84437cb6a88a8e2db54b90"><span data-offset-key="7b638ff7de84437cb6a88a8e2db54b90:0">Given a singly linked list (a list which can only be traversed in one direction), find the item that is located at 'k' items from the end. So if the list is a, b, c, d and k is 2 then the answer is 'c'. The solution should not search the list twice.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="20e2f57f622d4eb69b8dcf70e3e5db31"><span data-offset-key="20e2f57f622d4eb69b8dcf70e3e5db31:0">How can you tell if a Linked List is a Palindrome?</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="04c8862486fc4b4bb6c2e783087bd5e8"><span data-offset-key="04c8862486fc4b4bb6c2e783087bd5e8:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="4c7d3d4d0352430fa379bd020cd7fca3"><span data-offset-key="4c7d3d4d0352430fa379bd020cd7fca3:0">Linked lists in Python</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="964cd1c4b3b44ea69c6abf7eeed5c3f1"><span data-offset-key="964cd1c4b3b44ea69c6abf7eeed5c3f1:0">Implementation:</span></span></span>

    # Singly-Linked List## The linked list is passed around as a variable pointing to the# root node of the linked list, or None if the list is empty.​class LinkedListNode:    def __init__(self, value):        self.value = value        self.next = None​def linked_list_append(linked_list, value):    '''Appends a value to the end of the linked list'''    node = linked_list    insert_node = LinkedListNode(value)    if not node:        return insert_node    while node.next:        node = node.next    node.next = insert_node    return linked_list​def linked_list_insert_index(linked_list, value, index):    '''Inserts a value at a particular index'''    node = linked_list    insert_node = LinkedListNode(value)        # Check if inserting at head    if index == 0:        insert_node.next = node        return insert_node​    # Skip ahead    for _ in range(index - 1):        node = node.next        if not node:            raise ValueError    insert_node.next = node.next    node.next = insert_node    return linked_list​def linked_list_delete(linked_list, value):    '''Deletes the first occurrence of a value in the linked list'''    node = linked_list        # Check if deleting at head    if node.value == value:        return node.next​    # Skip ahead    while node.next:        if node.next.value == value:            node.next = node.next.next            return linked_list        node = node.next    raise ValueError​def linked_list_delete_index(linked_list, index):    '''Deletes the element at a particular index in the linked list'''    node = linked_list        # Check if deleting at head    if index == 0:        return node.next​    # Skip ahead    for _ in range(index - 1):        node = node.next        if not node:            raise ValueError    if not node.next:        raise ValueError    node.next = node.next.next    return linked_list​def linked_list_iter(linked_list):    '''Lazy iterator over each node in the linked list'''    node = linked_list    while node is not None:        yield node        node = node.next​​# Append to backlinked_list = None    # Start with an empty linked listlinked_list = linked_list_append(linked_list, 1)linked_list = linked_list_append(linked_list, 2)linked_list = linked_list_append(linked_list, 4)print([node.value for node in linked_list_iter(linked_list)])​# Insert by indexlinked_list = linked_list_insert_index(linked_list, 0, 0) # Frontprint([node.value for node in linked_list_iter(linked_list)])linked_list = linked_list_insert_index(linked_list, 3, 3) # Backprint([node.value for node in linked_list_iter(linked_list)])​# Delete "3"linked_list = linked_list_delete(linked_list, 3)print([node.value for node in linked_list_iter(linked_list)])​# Delete by indexlinked_list = linked_list_delete_index(linked_list, 0)print([node.value for node in linked_list_iter(linked_list)])linked_list = linked_list_delete_index(linked_list, 1)print([node.value for node in linked_list_iter(linked_list)])​# Delete until emptylinked_list = linked_list_delete_index(linked_list, 0)linked_list = linked_list_delete_index(linked_list, 0)print([node.value for node in linked_list_iter(linked_list)])​

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="ec97b0c4ecb5471eb3879ea75d585679"><span data-offset-key="ec97b0c4ecb5471eb3879ea75d585679:0">Output:</span></span></span>

    [1, 2, 4][0, 1, 2, 4][0, 1, 2, 3, 4][0, 1, 2, 4][1, 2, 4][1, 4][]

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="76011d4ea30e4d22aed803f6c2e7c3f8"><span data-offset-key="76011d4ea30e4d22aed803f6c2e7c3f8:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://www.educative.io/blog/data-structures-linked-list-java-tutorial" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="9888baf89d774cfe9c17367407afe4bf"><span data-offset-key="9888baf89d774cfe9c17367407afe4bf:0">Linked lists</span></span></a><span data-key="066f547e979245b5a5fca114ba9f3e9c"><span data-offset-key="066f547e979245b5a5fca114ba9f3e9c:0"> are a sequential collection of data that uses </span><span data-offset-key="066f547e979245b5a5fca114ba9f3e9c:1">**relational pointers on each data node**</span><span data-offset-key="066f547e979245b5a5fca114ba9f3e9c:2"> to link to the next node in the list.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ecae26de658c457a99dd167cecca0049"><span data-offset-key="ecae26de658c457a99dd167cecca0049:0">Unlike arrays, linked lists do not have objective positions in the list. Instead, they have relational positions based on their surrounding nodes.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4142ef6a1637418196f9dc9b1d85f04f"><span data-offset-key="4142ef6a1637418196f9dc9b1d85f04f:0">The first node in a linked list is called the </span><span data-offset-key="4142ef6a1637418196f9dc9b1d85f04f:1">**head node,**</span><span data-offset-key="4142ef6a1637418196f9dc9b1d85f04f:2"> and the final is called the </span><span data-offset-key="4142ef6a1637418196f9dc9b1d85f04f:3">**tail node**</span><span data-offset-key="4142ef6a1637418196f9dc9b1d85f04f:4">, which has a </span><span data-offset-key="4142ef6a1637418196f9dc9b1d85f04f:5">`null`</span><span data-offset-key="4142ef6a1637418196f9dc9b1d85f04f:6"> pointer.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="bd9f6aeea2d6453b909eaabae0fdd12c"><span data-offset-key="bd9f6aeea2d6453b909eaabae0fdd12c:0"><span data-slate-zero-width="n">​</span></span></span></span>

<figure><img src="https://www.educative.io/cdn-cgi/image/f=auto,fit=contain,w=300,q=10/api/page/4827483893923840/image/download/5638844823633920" alt="widget" class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">widget</span></figcaption></figure>

<figure><img src="https://www.educative.io/cdn-cgi/image/f=auto,fit=contain,w=600/api/page/4827483893923840/image/download/5638844823633920" alt="widget" class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">widget</span></figcaption></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d895846bb84c41c6968e82d9be7df164"><span data-offset-key="d895846bb84c41c6968e82d9be7df164:0">Linked lists can be singly or doubly linked depending if each node has just a single pointer to the next node or if it also has a second pointer to the previous node.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="32a0e64bf363478cb67058a4b29f3a75"><span data-offset-key="32a0e64bf363478cb67058a4b29f3a75:0">You can think of linked lists like a chain; individual links only have a connection to their immediate neighbors but all the links together form a larger structure.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="764dfa1e11ac46aa841957a70dc2d3b9"><span data-offset-key="764dfa1e11ac46aa841957a70dc2d3b9:0">Python does not have a built-in implementation of linked lists and therefore requires that you implement a </span><span data-offset-key="764dfa1e11ac46aa841957a70dc2d3b9:1">`Node`</span><span data-offset-key="764dfa1e11ac46aa841957a70dc2d3b9:2"> class to hold a data value and one or more pointers.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ecb38348711548078c8eb52080d68f03"><span data-offset-key="ecb38348711548078c8eb52080d68f03:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="23daf7154bdd4458b49e3076af202df2"><span data-offset-key="23daf7154bdd4458b49e3076af202df2:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b33e13291d0148f295d5e25ab72d25b7"><span data-offset-key="b33e13291d0148f295d5e25ab72d25b7:0">**Advantages:**</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="803c32fd73c64b58b277fc3cd31334a9"><span data-offset-key="803c32fd73c64b58b277fc3cd31334a9:0">Efficient insertion and deletion of new elements</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="10a477a9ec04433691e4e8281e974738"><span data-offset-key="10a477a9ec04433691e4e8281e974738:0">Simpler to reorganize than arrays</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0dcc685f505f4950b678832f9ec5f7c5"><span data-offset-key="0dcc685f505f4950b678832f9ec5f7c5:0">Useful as a starting point for advanced data structures like graphs or trees</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="afd4e04eb0da4eb8b61b66a7f157ae1b"><span data-offset-key="afd4e04eb0da4eb8b61b66a7f157ae1b:0">**Disadvantages:**</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="afc5b17f1b1c41d6aa59becd0aac1eab"><span data-offset-key="afc5b17f1b1c41d6aa59becd0aac1eab:0">Storage of pointers with each data point increases memory usage</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="66c935c5f99c4b8c94ddb9943043174a"><span data-offset-key="66c935c5f99c4b8c94ddb9943043174a:0">Must always traverse the linked list from Head node to find a specific element</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="bb3835eed48947a1b9adc381a069e00d"><span data-offset-key="bb3835eed48947a1b9adc381a069e00d:0">**Applications:**</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="fb5d247850c7448797d6be5bad5b443b"><span data-offset-key="fb5d247850c7448797d6be5bad5b443b:0">Building block for advanced data structures</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="49152e8adbea4d9095658e4477315956"><span data-offset-key="49152e8adbea4d9095658e4477315956:0">Solutions that call for frequent addition and removal of data</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="41c7f006c6c04695932a4f47c21ffe83"><span data-offset-key="41c7f006c6c04695932a4f47c21ffe83:0">Common linked list interview questions in Python</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="913c3baaa8d94098946a133db4bb226f"><span data-offset-key="913c3baaa8d94098946a133db4bb226f:0">Print the middle element of a given linked list</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ae0bf98fa10d43dda8665d0a0d3c202a"><span data-offset-key="ae0bf98fa10d43dda8665d0a0d3c202a:0">Remove duplicate elements from a sorted linked list</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="cd2c6d63655345c18cb03960b23aa607"><span data-offset-key="cd2c6d63655345c18cb03960b23aa607:0">Check if a singly linked list is a palindrome</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3304dcd3fb2c41f7ad8cb12a081ee297"><span data-offset-key="3304dcd3fb2c41f7ad8cb12a081ee297:0">Merge K sorted linked lists</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ef0beb3b28674f22a76c56cacd46f708"><span data-offset-key="ef0beb3b28674f22a76c56cacd46f708:0">Find the intersection point of two linked lists</span></span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Implementation </span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Simple</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Advanced</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Implementation </span>

    """The LinkedList code from before is provided below.Add three functions to the LinkedList."get_position" returns the element at a certain position.The "insert" function will add an element to a particularspot in the list."delete" will delete the first element with thatparticular value.Then, use "Test Run" and "Submit" to run the test casesat the bottom."""​class Element(object):    def __init__(self, value):        self.value = value        self.next = None​class LinkedList(object):    def __init__(self, head=None):        self.head = head​    def append(self, new_element):        current = self.head        if self.head:            while current.next:                current = current.next            current.next = new_element        else:            self.head = new_element​    def get_position(self, position):        """Get an element from a particular position.        Assume the first position is "1".        Return "None" if position is not in the list."""        current = self.head        if(self.head):            for i in range(position)[1:]:                if(current.next==None):                    return None                else:                    current=current.next            return current        return None​    def insert(self, new_element, position):        """Insert a new node at the given position.        Assume the first position is "1".        Inserting at position 3 means between        the 2nd and 3rd elements."""        current = self.head        if(self.head):            for i in range(position)[1:]:                if(i==position-1):                    after = current.next                    current.next = new_element                    new_element.next = after                elif(current.next!=None):                    current = current.next                else:                    return 'position out of bounds'        pass​​    def delete(self, value):        """Delete the first node with a given value."""        current = self.head        if(self.head):            while(current.next!=None):                if(current.next.value==value):                    after = current.next.next                    current.next = after                else:                    current = current.next​        if(self.head.value==value):            after = self.head.next            self.head = after        pass​# Test cases# Set up some Elementse1 = Element(1)e2 = Element(2)e3 = Element(3)e4 = Element(4)​# Start setting up a LinkedListll = LinkedList(e1)ll.append(e2)ll.append(e3)​# Test get_position# Should print 3print ll.head.next.next.value# Should also print 3print ll.get_position(3).value​# Test insertll.insert(e4,3)# Should print 4 nowprint ll.get_position(3).value​# Test deletell.delete(1)# Should print 2 nowprint ll.get_position(1).value# Should print 4 nowprint ll.get_position(2).value# Should print 3 nowprint ll.get_position(3).value​

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Simple</span>

    class Node:    def __init__(self, dataval=None):        self.dataval = dataval        self.nextval = None class SLinkedList:    def __init__(self):        self.headval = None list1 = SLinkedList()list1.headval = Node("Mon")e2 = Node("Tue")e3 = Node("Wed")# Link first Node to second nodelist1.headval.nextval = e2 # Link second Node to third nodee2.nextval = e3​

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Advanced</span>

    from __future__ import annotations​from collections.abc import Iterable, Iteratorfrom typing import Optional​from graph_examples.linked_lists.base_lists import (    BaseCircularLinkedList,    BaseLinearLinkedList,    BaseDoublyLinkedList,    BaseSinglyLinkedList,)from graph_examples.linked_lists.nodes import LinkedNode, DoublyLinkedNode, CircularLinkedNode, CircularDoublyLinkedNodefrom graph_examples.linked_lists.base_nodes import T​​class LinkedList(BaseLinearLinkedList[T], BaseSinglyLinkedList[T]):    def __init__(self, values: Iterable[T] = ()) -> None:        values_iter = iter(values)        try:            self.head = LinkedNode(next(values_iter))        except StopIteration:            self.head = None        node = self.head        for value in values_iter:            node.next = LinkedNode(value)            node = node.next​    def appendleft(self, value: T) -> None:        self.head = LinkedNode(value, self.head)​    def popleft(self) -> T:        if not self:            raise IndexError        node = self.head        self.head = node.next        return node.value​    def reverse(self) -> None:        node = self.head        last_node = None        while node is not None:            node.next, last_node, node = last_node, node, node.next        self.head = last_node​​class DoublyLinkedList(BaseLinearLinkedList[T], BaseDoublyLinkedList[T]):    def __init__(self, values: Iterable = ()) -> None:        values_iter = iter(values)        try:            self.head = DoublyLinkedNode(next(values_iter))        except StopIteration:            self.head = None        node = self.head        for value in values_iter:            node.next = DoublyLinkedNode(value, None, node)            node = node.next        self.tail = node​    def __reversed__(self) -> Iterator[T]:        node = self.tail        while node is not None:            yield node.value            node = node.last​    def append(self, value: T):        old_tail = self.tail        self.tail = DoublyLinkedNode(value, None, old_tail)        if old_tail is None:            self.head = self.tail        else:            old_tail.next = self.tail​    def appendleft(self, value: T):        old_head = self.head        self.head = DoublyLinkedNode(value, old_head)        if old_head is None:            self.tail = self.head        else:            old_head.last = self.head​    def pop(self) -> T:        if not self:            raise IndexError        old_tail = self.tail        self.tail = old_tail.last        if self.tail is None:            self.head = None        else:            self.tail.next = None        return old_tail.value​    def popleft(self) -> T:        if not self:            raise IndexError        old_head = self.head        self.head = old_head.next        if self.head is None:            self.tail = None        else:            self.head.last = None        return old_head.value​    def reverse(self) -> None:        node = self.head        self.head, self.tail = self.tail, self.head        while node is not None:            node.next, node.last, node = node.last, node.next, node.next​​class CircularLinkedList(BaseCircularLinkedList[T], BaseSinglyLinkedList[T]):    def __init__(self, values: Iterable[T] = ()):        values_iter = iter(values)        try:            head = CircularLinkedNode(next(values_iter))        except StopIteration:            head = None        node = head        for value in values_iter:            node.next = CircularLinkedNode(value, head)            node = node.next        self.tail = node​    @property    def head(self) -> CircularLinkedNode[T]:        return self.tail.next​    @head.setter    def head(self, node: CircularLinkedNode[T]):        self.tail.next = node​    def appendleft(self, value: T) -> None:        if not self:            self.tail = CircularLinkedNode(value)        else:            self.head = CircularLinkedNode(value, self.head)​    def reverse(self) -> None:        if not self:            return        node = self.head        last_node = self.tail        while node is not self.tail:            node.next, last_node, node = last_node, node, node.next        self.tail.next, self.tail = last_node, self.head​​class CircularDoublyLinkedList(BaseCircularLinkedList[T], BaseDoublyLinkedList[T]):    tail: Optional[CircularDoublyLinkedNode[T]]    head: Optional[CircularDoublyLinkedNode[T]]​    def __init__(self, values: Iterable[T] = ()) -> None:        values_iter = iter(values)        try:            head = CircularDoublyLinkedNode(next(values_iter))        except StopIteration:            head = None        node = head        for value in values_iter:            node.next = CircularDoublyLinkedNode(value, head, node)            node = node.next            head.last = node        self.tail = node​    @property    def head(self) -> CircularDoublyLinkedNode[T]:        return self.tail.next​    def __reversed__(self) -> Iterator[T]:        if not self:            return        yield self.tail.value        node = self.tail.last        while node is not self.tail:            yield node.value            node = node.last​    def append(self, value: T) -> None:        if not self:            self.tail = CircularDoublyLinkedNode(value)        else:            self.tail = CircularDoublyLinkedNode(value, self.head, self.tail)            self.tail.last.next = self.tail            self.head.last = self.tail​    def appendleft(self, value: T) -> None:        if not self:            self.tail = CircularDoublyLinkedNode(value)        else:            self.tail.next = CircularDoublyLinkedNode(value, self.head, self.tail)            self.head.next.last = self.tail.next​    def pop(self) -> T:        if not self:            raise IndexError        value = self.tail.value        if self.tail is self.head:            self.tail = None        else:            self.tail.last.next, self.head.last, self.tail = self.head, self.tail.last, self.tail.last        return value​    def popleft(self) -> T:        if not self:            raise IndexError        value = self.head.value        if self.tail is self.head:            self.tail = None        else:            self.tail.next = self.tail.next.next            self.tail.next.last = self.tail        return value​    def reverse(self) -> None:        if not self:            return        node = self.head        while node is not self.tail:            node.next, node.last, node = node.last, node.next, node.next        self.tail.next, self.tail.last, self.tail = self.tail.last, self.tail.next, self.tail.next​

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4f7d788992eb4d4db0e6a4ee5fb95987"><span data-offset-key="4f7d788992eb4d4db0e6a4ee5fb95987:0">A linked list is similar to an array, it holds values. However, links in a linked list do not have indexes.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9a890e649e064279a44af8237fcc2615"><span data-offset-key="9a890e649e064279a44af8237fcc2615:0">This is an example of a double ended, doubly linked list.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3965836406e54f559ff943720b436c66"><span data-offset-key="3965836406e54f559ff943720b436c66:0">Each link references the next link and the previous one.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b6726611373841d6b844b5c18443e0fb"><span data-offset-key="b6726611373841d6b844b5c18443e0fb:0">A Doubly Linked List (DLL) contains an extra pointer, typically called previous</span></span></span>

    <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="70ebf101ed8d4b18beac489f7a53106e"><span data-offset-key="70ebf101ed8d4b18beac489f7a53106e:0"> pointer, together with next pointer and data which are there in singly linked list.</span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d4e00d852dd54288a2e7cca84fc23144"><span data-offset-key="d4e00d852dd54288a2e7cca84fc23144:0">Advantages over SLL - It can be traversed in both forward and backward direction.</span></span></span>

        <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="52ef0a816f064073976dc73a25295ce1"><span data-offset-key="52ef0a816f064073976dc73a25295ce1:0"> Delete operation is more efficient</span></span></span>

    """Each ListNode holds a reference to its previous nodeas well as its next node in the List."""class ListNode:  def __init__(self, value, prev=None, next=None):    self.value = value    self.prev = prev    self.next = next​  """Wrap the given value in a ListNode and insert it  after this node. Note that this node could already  have a next node it is point to."""  def insert_after(self, value):    current_next = self.next    self.next = ListNode(value, self, current_next)    if current_next:      current_next.prev = self.next​  """Wrap the given value in a ListNode and insert it  before this node. Note that this node could already  have a previous node it is point to."""  def insert_before(self, value):    current_prev = self.prev    self.prev = ListNode(value, current_prev, self)    if current_prev:      current_prev.next = self.prev​  """Rearranges this ListNode's previous and next pointers  accordingly, effectively deleting this ListNode."""  def delete(self):    if self.prev:      self.prev.next = self.next    if self.next:      self.next.prev = self.prev​"""Our doubly-linked list class. It holds references tothe list's head and tail nodes."""class DoublyLinkedList:  def __init__(self, node=None):    self.head = node    self.tail = node    self.length = 1 if node is not None else 0​  def __len__(self):    return self.length​  def add_to_head(self, value):    pass​  def remove_from_head(self):    pass​  def add_to_tail(self, value):    pass​  def remove_from_tail(self):    pass​  def move_to_front(self, node):    pass​  def move_to_end(self, node):    pass​  def delete(self, node):    pass      def get_max(self):    pass​

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4f31f0b77db64bf9856ccbd4e0864a48"><span data-offset-key="4f31f0b77db64bf9856ccbd4e0864a48:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9f0d0262b80941d48c4e9a532cfe2cbb"><span data-offset-key="9f0d0262b80941d48c4e9a532cfe2cbb:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0a1082056363476994e7f52439ad9e1c"><span data-offset-key="0a1082056363476994e7f52439ad9e1c:0">Test:</span></span></span>

    import unittestfrom doubly_linked_list import ListNodefrom doubly_linked_list import DoublyLinkedList​class DoublyLinkedListTests(unittest.TestCase):  def setUp(self):    self.node = ListNode(1)    self.dll = DoublyLinkedList(self.node)​  def test_list_remove_from_tail(self):    self.dll.remove_from_tail()    self.assertIsNone(self.dll.head)    self.assertIsNone(self.dll.tail)    self.assertEqual(len(self.dll), 0)​    self.dll.add_to_tail(33)    self.assertEqual(self.dll.head.value, 33)    self.assertEqual(self.dll.tail.value, 33)    self.assertEqual(len(self.dll), 1)    self.assertEqual(self.dll.remove_from_tail(), 33)    self.assertEqual(len(self.dll), 0)​    self.dll.add_to_tail(68)    self.assertEqual(len(self.dll), 1)    self.assertEqual(self.dll.remove_from_tail(), 68)    self.assertEqual(len(self.dll), 0)​  def test_list_remove_from_head(self):    self.dll.remove_from_head()    self.assertIsNone(self.dll.head)    self.assertIsNone(self.dll.tail)    self.assertEqual(len(self.dll), 0)​    self.dll.add_to_head(2)    self.assertEqual(self.dll.head.value, 2)    self.assertEqual(self.dll.tail.value, 2)    self.assertEqual(len(self.dll), 1)    self.assertEqual(self.dll.remove_from_head(), 2)    self.assertEqual(len(self.dll), 0)        self.dll.add_to_head(55)    self.assertEqual(len(self.dll), 1)    self.assertEqual(self.dll.remove_from_head(), 55)    self.assertEqual(len(self.dll), 0)​  def test_list_add_to_tail(self):    self.assertEqual(self.dll.tail.value, 1)    self.assertEqual(len(self.dll), 1)​    self.dll.add_to_tail(30)    self.assertEqual(self.dll.tail.prev.value, 1)    self.assertEqual(self.dll.tail.value, 30)    self.assertEqual(len(self.dll), 2)​    self.dll.add_to_tail(20)    self.assertEqual(self.dll.tail.prev.value, 30)    self.assertEqual(self.dll.tail.value, 20)    self.assertEqual(len(self.dll), 3)​  def test_node_delete(self):    node_1 = ListNode(3)    node_2 = ListNode(4)    node_3 = ListNode(5)​    node_1.next = node_2    node_2.next = node_3    node_2.prev = node_1    node_3.prev = node_2​    node_2.delete()​    self.assertEqual(node_1.next, node_3)    self.assertEqual(node_3.prev, node_1)​  def test_node_insert_before(self):    self.node.insert_before(0)    self.assertEqual(self.node.prev.value, 0)​  def test_list_add_to_head(self):    self.assertEqual(self.dll.head.value, 1)​    self.dll.add_to_head(10)    self.assertEqual(self.dll.head.value, 10)    self.assertEqual(self.dll.head.next.value, 1)    self.assertEqual(len(self.dll), 2)​  def test_node_insert_after(self):    self.node.insert_after(2)    self.assertEqual(self.node.next.value, 2)​  def test_list_move_to_end(self):    self.dll.add_to_head(40)    self.assertEqual(self.dll.tail.value, 1)    self.assertEqual(self.dll.head.value, 40)​    self.dll.move_to_end(self.dll.head)    self.assertEqual(self.dll.tail.value, 40)    self.assertEqual(self.dll.tail.prev.value, 1)    self.assertEqual(len(self.dll), 2)​    self.dll.add_to_tail(4)    self.dll.move_to_end(self.dll.head.next)    self.assertEqual(self.dll.tail.value, 40)    self.assertEqual(self.dll.tail.prev.value, 4)    self.assertEqual(len(self.dll), 3)​  def test_list_move_to_front(self):    self.dll.add_to_tail(3)    self.assertEqual(self.dll.head.value, 1)    self.assertEqual(self.dll.tail.value, 3)​    self.dll.move_to_front(self.dll.tail)    self.assertEqual(self.dll.head.value, 3)    self.assertEqual(self.dll.head.next.value, 1)    self.assertEqual(len(self.dll), 2)​    self.dll.add_to_head(29)    self.dll.move_to_front(self.dll.head.next)    self.assertEqual(self.dll.head.value, 3)    self.assertEqual(self.dll.head.next.value, 29)    self.assertEqual(len(self.dll), 3)​  def test_list_delete(self):    self.dll.delete(self.node)    self.assertIsNone(self.dll.head)    self.assertIsNone(self.dll.tail)    self.assertEqual(len(self.dll), 0)​    self.dll.add_to_tail(1)    self.dll.add_to_head(9)    self.dll.add_to_tail(6)​    self.dll.delete(self.dll.head)    self.assertEqual(self.dll.head.value, 1)    self.assertEqual(self.dll.tail.value, 6)    self.assertEqual(len(self.dll), 2)​    self.dll.delete(self.dll.head)    self.assertEqual(self.dll.head.value, 6)    self.assertEqual(self.dll.tail.value, 6)    self.assertEqual(len(self.dll), 1)​  def test_get_max(self):    self.assertEqual(self.dll.get_max(), 1)    self.dll.add_to_tail(100)    self.assertEqual(self.dll.get_max(), 100)    self.dll.add_to_tail(55)    self.assertEqual(self.dll.get_max(), 100)    self.dll.add_to_tail(101)    self.assertEqual(self.dll.get_max(), 101)​if __name__ == '__main__':  unittest.main()

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="119a0e76dfc842969d17ed343ec39502"><span data-offset-key="119a0e76dfc842969d17ed343ec39502:0"><span data-slate-zero-width="n">​</span></span></span></span>

<a href="untitled-5/hashmap-or-hash-tables.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Hashmap or Hash tables</span>

<a href="untitled-4/double-linked-list.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Double Linked List</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 8 hours ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/practice/untitled/untitled-4/README.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>

<span class="text-4505230f--InfoH100-1e92e1d1--textContentFamily-49a318e1">Contents</span>

<a href="untitled-4.html#linked-list" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Linked List</span></span>

<a href="untitled-4.html#linked-lists-in-python" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Linked lists in Python</span></span>
